[gd_scene load_steps=8 format=3 uid="uid://dcltpum7ytm3l"]

[ext_resource type="Script" path="res://scenes/level_scene_2.gd" id="1_8hq0r"]
[ext_resource type="PackedScene" uid="uid://cbfr4vf4q4txf" path="res://scenes/level/hase.tscn" id="2_7eugc"]
[ext_resource type="PackedScene" uid="uid://ccwao5x8nsffy" path="res://scenes/level/Koenig.tscn" id="2_kia4m"]
[ext_resource type="PackedScene" uid="uid://b4blrdjthcxnn" path="res://ui/components/game_logo.tscn" id="4_iiwnw"]
[ext_resource type="PackedScene" uid="uid://caqmnyi1wmxb8" path="res://scenes/level/Face.tscn" id="4_svdq7"]
[ext_resource type="PackedScene" uid="uid://bkk87o2ooo6at" path="res://ui/overlays/fade_overlay.tscn" id="5_7e0kh"]

[sub_resource type="LabelSettings" id="LabelSettings_2ikbh"]
font_size = 8
font_color = Color(1, 1, 1, 0.486275)

[node name="MainMenuScene" type="Node2D"]
script = ExtResource("1_8hq0r")
king_scene = ExtResource("2_kia4m")
bunny_scene = ExtResource("2_7eugc")
face_scene = ExtResource("4_svdq7")

[node name="UI" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="GameLogo" parent="UI/CenterContainer/VBoxContainer" instance=ExtResource("4_iiwnw")]
layout_mode = 2

[node name="King" type="Button" parent="UI/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "King"

[node name="Bunny" type="Button" parent="UI/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Bunny"

[node name="Foot" type="Button" parent="UI/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Foot"

[node name="Face" type="Button" parent="UI/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Face"

[node name="Credits" type="MarginContainer" parent="UI/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_top = 10

[node name="Label" type="Label" parent="UI/CenterContainer/VBoxContainer/Credits"]
layout_mode = 2
text = "credits"
label_settings = SubResource("LabelSettings_2ikbh")
horizontal_alignment = 1

[node name="FadeOverlay" parent="UI" instance=ExtResource("5_7e0kh")]
unique_name_in_owner = true
visible = false
fade_in_duration = 0.5
fade_out_duration = 0.5

[node name="Music" type="AudioStreamPlayer" parent="."]
autoplay = true
bus = &"Music"

[connection signal="pressed" from="UI/CenterContainer/VBoxContainer/King" to="." method="_on_king_pressed"]
[connection signal="pressed" from="UI/CenterContainer/VBoxContainer/Bunny" to="." method="_on_bunny_pressed"]
[connection signal="pressed" from="UI/CenterContainer/VBoxContainer/Foot" to="." method="_on_foot_pressed"]
[connection signal="pressed" from="UI/CenterContainer/VBoxContainer/Face" to="." method="_on_face_pressed"]
